// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkspaceInitial user is OSD admin render workspace initial page normally when user is dashboard admin 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    style="min-height: 100vh;"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <span
        data-euiicon-type="logoOpenSearch"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
        style="padding-top: 24px;"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
          style="width: 1264px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <h1
                class="euiTitle euiTitle--large"
                style="font-weight: 400;"
              >
                Welcome to OpenSearch
              </h1>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiSpacer euiSpacer--xxl"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <span
                      data-euiicon-type="wsSelector"
                    />
                     
                    <h2
                      class="euiTitle euiTitle--medium"
                      style="font-weight: 400;"
                    >
                      My workspaces
                    </h2>
                  </div>
                  <div
                    class="euiText euiText--small"
                  >
                    Collaborate on use-case based projects with workspaces.
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownCenter"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButton euiButton--primary euiButton--small euiButton--fill"
                        data-test-subj="workspace-initial-card-createWorkspace-button"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButton__content"
                        >
                          <span
                            class="euiButtonContent__icon"
                            color="inherit"
                            data-euiicon-type="plus"
                          />
                          <span
                            class="euiButton__text"
                          >
                            Create Workspace
                              
                            <span
                              data-euiicon-type="arrowDown"
                            />
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner observability"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsObservability"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Observability
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Gain visibility into your application and infrastructure
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Create a workspace or request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <button
                            class="euiButton euiButton--primary euiButton--small"
                            data-test-subj="workspace-initial-useCaseCard-observability-button-createWorkspace"
                            type="button"
                          >
                            <span
                              class="euiButtonContent euiButton__content"
                            >
                              <span
                                class="euiButtonContent__icon"
                                color="inherit"
                                data-euiicon-type="plus"
                              />
                              <span
                                class="euiButton__text"
                              >
                                Create workspace
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner security-analytics"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsSecurityAnalytics"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Security Analytics
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Enhance your security posture with advanced analytics
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Create a workspace or request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <button
                            class="euiButton euiButton--primary euiButton--small"
                            data-test-subj="workspace-initial-useCaseCard-security-analytics-button-createWorkspace"
                            type="button"
                          >
                            <span
                              class="euiButtonContent euiButton__content"
                            >
                              <span
                                class="euiButtonContent__icon"
                                color="inherit"
                                data-euiicon-type="plus"
                              />
                              <span
                                class="euiButton__text"
                              >
                                Create workspace
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner essentials"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsEssentials"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Essentials
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Get start with just the basics
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Create a workspace or request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <button
                            class="euiButton euiButton--primary euiButton--small"
                            data-test-subj="workspace-initial-useCaseCard-essentials-button-createWorkspace"
                            type="button"
                          >
                            <span
                              class="euiButtonContent euiButton__content"
                            >
                              <span
                                class="euiButtonContent__icon"
                                color="inherit"
                                data-euiicon-type="plus"
                              />
                              <span
                                class="euiButton__text"
                              >
                                Create workspace
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner search"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsSearch"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Search
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Discover and query your data with ease
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Create a workspace or request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <button
                            class="euiButton euiButton--primary euiButton--small"
                            data-test-subj="workspace-initial-useCaseCard-search-button-createWorkspace"
                            type="button"
                          >
                            <span
                              class="euiButtonContent euiButton__content"
                            >
                              <span
                                class="euiButtonContent__icon"
                                color="inherit"
                                data-euiicon-type="plus"
                              />
                              <span
                                class="euiButton__text"
                              >
                                Create workspace
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrow2"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <a
                      class="euiLink euiLink--primary"
                      href="https://docs.aws.amazon.com/opensearch-service/latest/developerguide/what-is.html"
                      rel="noopener noreferrer"
                      style="font-weight: normal; display: flex; align-items: center;"
                      target="_blank"
                    >
                      <span
                        class="eui-alignMiddle"
                        data-euiicon-type="reporter"
                      />
                       
                      Learn more from documentation
                      <span
                        aria-label="External link"
                        class="euiLink__externalIcon"
                        data-euiicon-type="popout"
                      />
                      <span
                        class="euiScreenReaderOnly"
                      >
                        (opens in a new tab or window)
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrow6"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <a
                      class="euiLink euiLink--primary"
                      href="https://playground.opensearch.org/"
                      rel="noopener noreferrer"
                      style="font-weight: normal; display: flex; align-items: center;"
                      target="_blank"
                    >
                      <span
                        data-euiicon-type="dashboardApp"
                      />
                       
                      Explore live demo environment at playground.opensearch.org
                      <span
                        aria-label="External link"
                        class="euiLink__externalIcon"
                        data-euiicon-type="popout"
                      />
                      <span
                        class="euiScreenReaderOnly"
                      >
                        (opens in a new tab or window)
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrow1"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <div
                      class="euiTextAlign euiTextAlign--right"
                    >
                      <button
                        class="euiLink euiLink--primary"
                        style="font-weight: normal;"
                        type="button"
                      >
                        View all workspaces
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div />
    </div>
  </div>
</div>
`;

exports[`WorkspaceInitial user is not OSD admin render workspace initial page normally when user is non dashboard admin 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    style="min-height: 100vh;"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <span
        data-euiicon-type="logoOpenSearch"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
        style="padding-top: 24px;"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
          style="width: 1264px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <h1
                class="euiTitle euiTitle--large"
                style="font-weight: 400;"
              >
                Welcome to OpenSearch
              </h1>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiSpacer euiSpacer--xxl"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <span
                      data-euiicon-type="wsSelector"
                    />
                     
                    <h2
                      class="euiTitle euiTitle--medium"
                      style="font-weight: 400;"
                    >
                      My workspaces
                    </h2>
                  </div>
                  <div
                    class="euiText euiText--small"
                  >
                    Collaborate on use-case based projects with workspaces.
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner observability"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsObservability"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Observability
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Gain visibility into your application and infrastructure
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner security-analytics"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsSecurityAnalytics"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Security Analytics
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Enhance your security posture with advanced analytics
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner essentials"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsEssentials"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Essentials
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Get start with just the basics
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero euiSplitPanel"
                    style="height: 426px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner search"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <span
                            data-euiicon-type="wsSearch"
                          />
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <h3
                            class="euiTitle euiTitle--xsmall"
                            style="display: flex; align-items: center;"
                          >
                            Search
                             
                            <span
                              data-euiicon-type="iInCircle"
                            />
                          </h3>
                        </div>
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              Discover and query your data with ease
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full"
                    />
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
                      style="display: grid; place-items: center;"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn createWorkspaceTextBorder"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <h4
                            class="euiTitle euiTitle--xsmall"
                          >
                            No workspaces
                          </h4>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText euiText--extraSmall"
                          >
                            <div
                              class="euiTextAlign euiTextAlign--center"
                            >
                              <div
                                class="euiTextColor euiTextColor--subdued"
                              >
                                Request a workspace owner to add you as a collaborator.
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrow2"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <a
                      class="euiLink euiLink--primary"
                      href="https://docs.aws.amazon.com/opensearch-service/latest/developerguide/what-is.html"
                      rel="noopener noreferrer"
                      style="font-weight: normal; display: flex; align-items: center;"
                      target="_blank"
                    >
                      <span
                        class="eui-alignMiddle"
                        data-euiicon-type="reporter"
                      />
                       
                      Learn more from documentation
                      <span
                        aria-label="External link"
                        class="euiLink__externalIcon"
                        data-euiicon-type="popout"
                      />
                      <span
                        class="euiScreenReaderOnly"
                      >
                        (opens in a new tab or window)
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrow6"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <a
                      class="euiLink euiLink--primary"
                      href="https://playground.opensearch.org/"
                      rel="noopener noreferrer"
                      style="font-weight: normal; display: flex; align-items: center;"
                      target="_blank"
                    >
                      <span
                        data-euiicon-type="dashboardApp"
                      />
                       
                      Explore live demo environment at playground.opensearch.org
                      <span
                        aria-label="External link"
                        class="euiLink__externalIcon"
                        data-euiicon-type="popout"
                      />
                      <span
                        class="euiScreenReaderOnly"
                      >
                        (opens in a new tab or window)
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrow1"
                >
                  <div
                    class="euiText euiText--small"
                  >
                    <div
                      class="euiTextAlign euiTextAlign--right"
                    >
                      <button
                        class="euiLink euiLink--primary"
                        style="font-weight: normal;"
                        type="button"
                      >
                        View all workspaces
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div />
    </div>
  </div>
</div>
`;
